# SKALA

./: .gitignore  README.md  USE.md  pyproject.toml
data/: val_annotations.csv
data/img_1__slices_D/0/: grains_0__uint32__500x500.raw  img_0__uint8__500x500.raw
data/img_1__slices_D/10/: grains_10__uint32__500x500.raw  img_10__uint8__500x500.raw
data/img_1__slices_D/100/: grains_100__uint32__500x500.raw  img_100__uint8__500x500.raw
data/img_1__slices_D/105/: grains_105__uint32__500x500.raw  img_105__uint8__500x500.raw
data/img_1__slices_D/110/: grains_110__uint32__500x500.raw  img_110__uint8__500x500.raw
data/img_1__slices_D/115/: grains_115__uint32__500x500.raw  img_115__uint8__500x500.raw
data/img_1__slices_D/120/: grains_120__uint32__500x500.raw  img_120__uint8__500x500.raw
data/img_1__slices_D/125/: grains_125__uint32__500x500.raw  img_125__uint8__500x500.raw
data/img_1__slices_D/130/: grains_130__uint32__500x500.raw  img_130__uint8__500x500.raw
data/img_1__slices_D/135/: grains_135__uint32__500x500.raw  img_135__uint8__500x500.raw
data/img_1__slices_D/140/: grains_140__uint32__500x500.raw  img_140__uint8__500x500.raw
data/img_1__slices_D/145/: grains_145__uint32__500x500.raw  (+1 more)
models/: best_model_efficientnet_b0.pth  blend_no_model_x_noise_gt_semantic_checkpoint_epoch_10.pth  freeze_final_model_x_noise_gt_instance_checkpoint_epoch_10.pth
results/: clf.json  final_clf_preds.csv
scripts/: main.py  otar.py  weka.py
src/: create_model.py  doubleconv.py  eval_classify.py  mask.py  metrics.py  rcnn.py  unet.py  visual.py
(+176 files in other folders)
